# report-classic-project

./: readme.rst  report_classic.py  report_line_detail.py  report_mline_detail.py  setup.cfg  setup.py
src/report-classic-project/: report_label.py  report_line_detail.py  report_mline_detail.py
src/report-classic-project/example/: report_sample.py
