[metadata]
description-file=README.rst
license_files=LICENSE.txt
name = "report-classic-project"
version = "0.1"
authors = [{ name="Câmara Municipal de São Bernardo do Campo, SP, Brazil", email="informatica@camarasbc.sp.gov.br" },]
description = "This is a ReportClassic Project made to print labels and reports in PDF FOR DJANGO FRAMEWORK."
readme = "README.rst"
license = { file="license.txt" }
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3","License :: OSI Approved :: MIT License","Operating System :: OS Independent",]
